[gd_scene load_steps=2 format=3 uid="uid://cln3v4r5mq8xh"]

[ext_resource type="Script" path="res://container_ui.gd" id="1_container_ui"]

[node name="ContainerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_container_ui")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayerPanel" type="Panel" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(550, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer/PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="CenterContainer/HBoxContainer/PlayerPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "YOUR INVENTORY"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/HBoxContainer/PlayerPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 8

[node name="ContainerPanel" type="Panel" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(550, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer/ContainerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="CenterContainer/HBoxContainer/ContainerPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "CHEST"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/HBoxContainer/ContainerPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 8

[node name="HintLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "ESC TO CLOSE  •  CLICK TO TRANSFER 1  •  SHIFT+CLICK TO TRANSFER ALL"
horizontal_alignment = 1

[node name="ErrorNotification" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 80.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
